# netmiko_mcp

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLIENT_INSTALLATION_GUIDE.md  LICENSE  README.md  README_ALT.md  TODO.md  main.py  pyproject.toml  tests.sh
.github/workflows/: main_testing.yaml
docs/: MCP_PLANNING.md  commands.md  configuration.md
docs/clients/: claude-code-http.md  claude-desktop-http.md
skills/caddy-tls/: SKILL.md
skills/mcp-client-config/: SKILL.md
skills/mcp-http-transport/: SKILL.md
skills/netmiko-mcp/: SKILL.md
skills/netmiko-tools-yml/: SKILL.md
src/netmiko_mcp/: audit.py  config.py  connection.py  http_auth.py  inventory.py  security.py  server.py
tests/: conftest.py  test_audit.py  test_config.py  test_connection.py  test_http_auth.py  test_http_server.py  test_integration.py  test_inventory.py  test_security.py  test_server.py
tests/etc/: commands.yml  netmiko-mcp.yml  responses.yml
